@@ -197,6 +197,8 @@ VideoPanel::VideoPanel (FilmEditor* e)
 	_frame_type->wrapped()->Append (_("3D left/right"));
 	_frame_type->wrapped()->Append (_("3D top/bottom"));
 	_frame_type->wrapped()->Append (_("3D alternate"));
+	_frame_type->wrapped()->Append (_("3D left only"));
+	_frame_type->wrapped()->Append (_("3D right only"));
 
 	_filters_button->Bind           (wxEVT_COMMAND_BUTTON_CLICKED,   boost::bind (&VideoPanel::edit_filters_clicked, this));
 	_colour_conversion_button->Bind (wxEVT_COMMAND_BUTTON_CLICKED,   boost::bind (&VideoPanel::edit_colour_conversion_clicked, this));
