@@ -1,3 +1,8 @@
+2014-04-01  Carl Hetherington  <cth@carlh.net>
+
+	* Basic support for separate left/right-eye files or directories
+	for 3D.
+
 2014-03-30  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.66.9 released.
